--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
 			<img id="gerrit" src="images/gerrit.png" />
 		</section>
 		<p>Spongebob Squarepants, Nickelodeon Animation Studios 1999</p>
+
+		<article class="block1">
+			<h1 class="title">Hallo test</h1>
+			<p class="text">Dit is een test tekstje</p>
+		</article>
 	</body>
 </html>
