--- a/index.html
+++ b/index.html
@@ -2,21 +2,13 @@
 <html lang="nl">
 	<head>
 		<meta charset="UTF-8" />
-		<title>gerrit</title>
-		<link type="text/css" href="styles/my_style.css" rel="stylesheet" />
-		<script type="text/javascript" src="scripts/jquery-1.9.1.min.js"></script>
-		<script type="text/javascript" src="scripts/my_scripts.js"></script>
+		<title>
+			Challenge 1
+		</title>
+		<link type="text/css" href="styles/style.css" rel="stylesheet" />
+		<script type="text/javascript" src="scripts/scripts.js"></script>
 	</head>
 	<body>
-		<section id="woonkamer">
-			<img id="background" src="images/background.jpg" />
-			<img id="gerrit" src="images/gerrit.png" />
-		</section>
-		<p>Spongebob Squarepants, Nickelodeon Animation Studios 1999</p>
 
-		<article class="block1">
-			<h1 class="title">Hallo test</h1>
-			<p class="text">Dit is een test tekstje</p>
-		</article>
 	</body>
 </html>
