--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
-<html lang="nl">
-	<head>
-		<meta charset="UTF-8" />
-		<title>
-			Challenge 1
-		</title>
-		<link type="text/css" href="styles/style.css" rel="stylesheet" />
-		<script type="text/javascript" src="scripts/scripts.js"></script>
-	</head>
-	<body>
-
-	</body>
+<html>
+  <head>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript" src="scripts/piechart.js"></script>
+    <script type="text/javascript" src="scripts/index.js"></script>
+    <link rel="stylesheets" type="text/css" href="css/style.css"></link>
+  </head>
+  <body>
+    <div id="donutchart"></div>
+  </body>
 </html>
